--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,6 +37,8 @@ $def with (content)
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/containers">Containers</a></li>
+                    <li><a href="/networks">Networks</a></li>
+                    <li><a href="/images">Images</a></li>
                 </ul>
             </div>
     </div>
