--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,8 @@ $def with (content)
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="static/main.css" />
+    <script src="static/sorttable.js"></script>
 </head>
 <body>
 <div class="content">
