--- a/templates/layout_top.html
+++ b/templates/layout_top.html
@@ -1,6 +1,7 @@
-$def with (content)
+$def with (title)
 <!DOCTYPE html>
 <html lang="en">
+duplicateElement(element,parent)
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,7 @@ $def with (content)
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Harbour - $content.title</title>
+    <title>Harbour - $title</title>
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -23,7 +24,7 @@ $def with (content)
     <script src="static/sorttable.js"></script>
     <script src="static/harbour.js"></script>
 </head>
-<body>
+<body onload="duplicateElement('notification','page-header');">
 <div class="content">
     <div class="navbar navbar-inverse">
           <div class="container-fluid">
@@ -47,14 +48,9 @@ $def with (content)
     </div>
     <div class="row-fluid">
         <div class="col-md-12">
-            <div class="page-header">
-                    <h1>$content.title</h1>
+            <div class="page-header" id="page-header">
+                    <h1>$title</h1>
             </div>
         </div>
     </div>
-    <div class="row-fluid">
-        $:content
-    </div>
-</div>
-</body>
-</html>
+    <div class="row-fluid"><pre>
